Added early analysis Jupyter notebook

--- a/Data colection and analyses/Add_data_to_the_database.ipynb
+++ b/Data colection and analyses/Add_data_to_the_database.ipynb
@@ -1,13 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "058f019d",
+   "metadata": {},
+   "source": [
+    "# This Notebook is used to upload data from the email the system send to a MySQL database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0b2f5049",
+   "id": "3180a075",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mysql import connector\n",
+    "# Because we have a large amount of Data to insert, we will use a sqlalchemy as I find it simpler \n",
+    "from sqlalchemy import create_engine\n",
     "import pandas as pd\n"
    ]
   },
@@ -16,7 +25,7 @@
    "id": "8198e3da",
    "metadata": {},
    "source": [
-    "## The following lines a SQL queries to:\n",
+    "## The following lines are SQL queries to:\n",
     "- create a user for this project\n",
     "- Create a Database (if this database doesn't exist yet) for this project and start using it \n",
     "- Clean all privileges from the new user and give Privileges only on the database created for this project\n",
@@ -50,195 +59,163 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28c44a7a",
+   "id": "fade98ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mydb = connector.connect(\n",
-    "#   host=\"localhost\",\n",
-    "#   user=\"pandas_user\",\n",
-    "#   password=\"TeenageMutanteNinjaPandas1234\",\n",
-    "#   database=\"pandas\"\n",
-    "# )"
+    "# The dat from the meail is copy pasted to the variable \"raw_data\"\n",
+    "\n",
+    "raw_data = [['tempo','Sensor 1','Sensor 2','Sensor 3','Sensor 4'],\n",
+    "[\"290834\",798,1109,1328,1237],\n",
+    "[\"290844\",927,1223,1341,1247],\n",
+    "[\"290854\",72,434,1332,1235],\n",
+    "[\"290904\",560,784,1330,1238],\n",
+    "[\"290914\",869,1122,1330,1241],\n",
+    "[\"290924\",240,598,1330,1240],\n",
+    "[\"290934\",165,377,1331,1235],\n",
+    "[\"290944\",225,591,1331,1234],\n",
+    "[\"290954\",932,1232,1230,1133],\n",
+    "[\"291004\",893,1227,1233,1136],\n",
+    "[\"291014\",172,378,1234,1146],\n",
+    "[\"291024\",81,442,1231,1145],\n",
+    "[\"291034\",74,392,1232,1139],\n",
+    "[\"291044\",849,1220,1232,1144],\n",
+    "[\"291054\",837,1212,1225,1136],\n",
+    "[\"291104\",72,435,1226,1151],\n",
+    "[\"291114\",871,1223,1235,1146],\n",
+    "[\"291124\",864,1228,1235,1150],\n",
+    "[\"291134\",103,352,1254,1147],\n",
+    "[\"291144\",62,347,1234,1139],\n",
+    "[\"291154\",106,360,1235,1148],\n",
+    "[\"291204\",344,727,1228,1156],\n",
+    "[\"291214\",52,341,1235,1156],\n",
+    "[\"291224\",147,373,1231,1153],\n",
+    "[\"291234\",932,1215,1230,1148],\n",
+    "[\"291244\",68,345,1225,1153],\n",
+    "[\"291254\",899,1131,1218,1156],\n",
+    "[\"291304\",160,545,1216,1161],\n",
+    "[\"291314\",762,1149,1213,1159],\n",
+    "[\"291324\",158,369,1216,1163],\n",
+    "[\"291334\",290,664,1212,1156],\n",
+    "[\"291344\",814,1194,1216,1155],\n",
+    "[\"291354\",932,1223,1211,1156],\n",
+    "[\"291404\",171,383,1269,1159],\n",
+    "[\"291414\",140,364,1214,1149],\n",
+    "[\"291424\",897,1129,1237,1160],\n",
+    "[\"291434\",85,352,1248,1165],\n",
+    "[\"291444\",859,1202,1244,1158],\n",
+    "[\"291454\",94,359,1241,1151],\n",
+    "[\"291504\",50,341,1244,1159],\n",
+    "[\"291514\",812,1047,1232,1160],\n",
+    "[\"291524\",876,1200,1230,1157],\n",
+    "[\"291534\",835,1080,1221,1159],\n",
+    "[\"291544\",78,346,1219,1160],\n",
+    "[\"291554\",87,350,1215,1154],\n",
+    "[\"291604\",883,1200,1221,1157],\n",
+    "[\"291614\",820,1171,1217,1167],\n",
+    "[\"291624\",70,433,1223,1165],\n",
+    "[\"291634\",915,1209,1215,1165],\n",
+    "[\"291644\",184,387,1222,1156],\n",
+    "[\"291654\",925,1191,1229,1158],\n",
+    "[\"291704\",940,1221,1231,1159],\n",
+    "[\"291714\",782,1006,1231,1153],\n",
+    "[\"291724\",539,773,1232,1165],\n",
+    "[\"291734\",922,1170,1231,1157],\n",
+    "[\"291744\",928,1155,1228,1162],\n",
+    "[\"291754\",144,373,1229,1140],\n",
+    "[\"291804\",832,1176,1231,1144],\n",
+    "[\"291814\",161,381,1224,1147],\n",
+    "[\"291824\",622,983,1234,1154],\n",
+    "[\"291834\",40,393,1230,1155],\n",
+    "[\"291844\",766,993,1228,1142],\n",
+    "[\"291854\",1024,1293,1243,1169],\n",
+    "[\"291904\",839,1068,1243,1195],\n",
+    "[\"291914\",896,1322,1233,1188],\n",
+    "[\"291924\",125,530,1248,1181],\n",
+    "[\"291934\",1017,1359,1254,1184],\n",
+    "[\"291944\",186,375,1240,1191],\n",
+    "[\"291954\",15,383,1240,1186],\n",
+    "[\"292004\",980,1352,1212,1183],\n",
+    "[\"292014\",207,383,1215,1187],\n",
+    "[\"292024\",177,368,1234,1180],\n",
+    "[\"292034\",167,573,1224,1185],\n",
+    "[\"292044\",124,341,1215,1169],\n",
+    "[\"292054\",1004,1246,1232,1179],\n",
+    "[\"292104\",979,1332,1239,1193],\n",
+    "[\"292114\",865,1298,1237,1189],\n",
+    "[\"292124\",93,492,1238,1181],\n",
+    "[\"292134\",34,348,1253,1195],\n",
+    "[\"292144\",1013,1349,1245,1168],\n",
+    "[\"292154\",408,626,1248,1189],\n",
+    "[\"292204\",980,1217,1258,1195],\n",
+    "[\"292214\",21,375,1254,1189],\n",
+    "[\"292224\",22,355,1245,1186],\n",
+    "[\"292234\",847,1210,1260,1187],\n",
+    "[\"292244\",43,325,1248,1190],\n",
+    "[\"292254\",227,404,1249,1197],\n",
+    "[\"292304\",977,1337,1259,1198],\n",
+    "[\"292314\",867,1280,1259,1198],\n",
+    "[\"292324\",564,941,1261,1191],\n",
+    "[\"292334\",992,1329,1264,1198],\n",
+    "[\"292344\",1072,1354,1271,1201],\n",
+    "[\"292354\",991,1213,1270,1204],\n",
+    "[\"300004\",1064,1313,1273,1216],\n",
+    "[\"300014\",148,369,1270,1206],\n",
+    "[\"300024\",230,417,1281,1203],\n",
+    "[\"300034\",865,1089,1281,1203],\n",
+    "[\"300044\",39,408,1286,1204],\n",
+    "[\"300054\",233,416,1287,1218],\n",
+    "[\"300104\",1032,1347,1287,1212],\n",
+    "[\"300114\",53,340,1286,1211],\n",
+    "[\"300124\",112,353,1283,1210],\n",
+    "[\"300134\",49,349,1279,1215],\n",
+    "[\"300144\",1057,1348,1290,1213],\n",
+    "[\"300154\",480,697,1290,1218],\n",
+    "[\"300204\",439,839,1285,1216],\n",
+    "[\"300214\",1057,1342,1287,1212],\n",
+    "[\"300224\",45,319,1257,1191],\n",
+    "[\"300234\",968,1337,1289,1223],\n",
+    "[\"300244\",524,918,1284,1219],\n",
+    "[\"300254\",196,395,1276,1201],\n",
+    "[\"300304\",787,1048,1284,1218],\n",
+    "[\"300314\",1020,1364,1294,1220],\n",
+    "[\"300324\",1055,1295,1293,1224],\n",
+    "[\"300334\",205,398,1288,1222],\n",
+    "[\"300344\",836,1281,1268,1198],\n",
+    "[\"300354\",64,430,1288,1222],\n",
+    "[\"300404\",74,333,1312,1224],\n",
+    "[\"300414\",596,981,1288,1226],\n",
+    "[\"300424\",1041,1368,1294,1223],\n",
+    "[\"300434\",1042,1306,1299,1220],\n",
+    "[\"300444\",94,346,1300,1232],\n",
+    "[\"300454\",1041,1360,1295,1225],\n",
+    "[\"300504\",999,1350,1287,1221],\n",
+    "[\"300514\",1037,1300,1290,1218],\n",
+    "[\"300524\",855,1280,1291,1216],\n",
+    "[\"300534\",275,511,1293,1226],\n",
+    "[\"300544\",1051,1313,1294,1224]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4989229a",
+   "id": "727a4608",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mycursor = mydb.cursor()\n",
-    "# mycursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS sensores_data (tempo varchar(10) UNIQUE,\n",
-    "#  sensor1 int,\n",
-    "#  sensor2 int,\n",
-    "#  sensor3 int,\n",
-    "#  sensor4 int);\"\"\")"
+    "# Create a dataframe with the raw_data for easier upload to the database\n",
+    "pd_data = pd.DataFrame(data=raw_data[1:],columns=[column.replace(\" \", \"\") for column in raw_data[0]])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fade98ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_data = [['tempo','Sensor 1','Sensor 2','Sensor 3','Sensor 4'],\n",
-    "[\"220917\",976,1281,1412,1261],\n",
-    "[\"220927\",883,1248,1415,1259],\n",
-    "[\"220937\",971,1266,1416,1258],\n",
-    "[\"220947\",766,1103,1385,1261],\n",
-    "[\"220957\",933,1179,1430,1201],\n",
-    "[\"221007\",26,315,1425,1211],\n",
-    "[\"221017\",281,526,1419,1217],\n",
-    "[\"221027\",1072,1333,1411,1207],\n",
-    "[\"221037\",36,311,1411,1215],\n",
-    "[\"221047\",768,1104,1401,1210],\n",
-    "[\"221057\",913,1271,1406,1213],\n",
-    "[\"221107\",264,645,1400,1214],\n",
-    "[\"221117\",888,1261,1409,1224],\n",
-    "[\"221127\",1021,1333,1408,1217],\n",
-    "[\"221137\",887,1269,1411,1218],\n",
-    "[\"221147\",336,725,1419,1218],\n",
-    "[\"221157\",157,528,1408,1224],\n",
-    "[\"221207\",941,1275,1400,1245],\n",
-    "[\"221217\",657,1008,1410,1211],\n",
-    "[\"221227\",55,407,1405,1214],\n",
-    "[\"221237\",946,1286,1410,1222],\n",
-    "[\"221247\",112,344,1406,1221],\n",
-    "[\"221257\",1035,1289,1410,1232],\n",
-    "[\"221307\",195,395,1407,1224],\n",
-    "[\"221317\",12,358,1412,1230],\n",
-    "[\"221327\",173,545,1409,1218],\n",
-    "[\"221337\",694,1047,1410,1226],\n",
-    "[\"221347\",901,1268,1409,1225],\n",
-    "[\"221357\",892,1273,1411,1231],\n",
-    "[\"221407\",682,912,1411,1223],\n",
-    "[\"221417\",71,438,1412,1225],\n",
-    "[\"221427\",90,333,1407,1226],\n",
-    "[\"221437\",969,1310,1412,1223],\n",
-    "[\"221447\",644,1016,1414,1221],\n",
-    "[\"221457\",0,348,1405,1221],\n",
-    "[\"221507\",1053,1340,1413,1226],\n",
-    "[\"221517\",137,363,1411,1217],\n",
-    "[\"221527\",209,408,1408,1226],\n",
-    "[\"221537\",8,358,1408,1216],\n",
-    "[\"221547\",206,397,1408,1224],\n",
-    "[\"221557\",137,357,1408,1219],\n",
-    "[\"221607\",948,1301,1411,1219],\n",
-    "[\"221617\",1025,1333,1408,1216],\n",
-    "[\"221627\",1061,1353,1409,1223],\n",
-    "[\"221637\",14,354,1406,1218],\n",
-    "[\"221647\",176,384,1407,1221],\n",
-    "[\"221657\",107,482,1406,1217],\n",
-    "[\"221707\",0,349,1405,1216],\n",
-    "[\"221717\",1037,1338,1406,1214],\n",
-    "[\"221727\",312,556,1398,1215],\n",
-    "[\"221737\",484,859,1402,1220],\n",
-    "[\"221747\",164,373,1400,1206],\n",
-    "[\"221757\",768,999,1399,1216],\n",
-    "[\"221807\",886,1255,1399,1217],\n",
-    "[\"221817\",901,1273,1405,1223],\n",
-    "[\"221827\",106,336,1399,1222],\n",
-    "[\"221837\",101,347,1407,1218],\n",
-    "[\"221847\",728,958,1402,1210],\n",
-    "[\"221857\",1087,1364,1406,1218],\n",
-    "[\"221907\",515,735,1403,1219],\n",
-    "[\"221917\",160,375,1403,1220],\n",
-    "[\"221927\",292,660,1402,1220],\n",
-    "[\"221937\",14,378,1405,1223],\n",
-    "[\"221947\",224,418,1402,1221],\n",
-    "[\"221957\",560,931,1405,1208],\n",
-    "[\"222007\",478,710,1404,1225],\n",
-    "[\"222017\",234,596,1404,1228],\n",
-    "[\"222027\",30,311,1404,1218],\n",
-    "[\"222037\",569,926,1405,1224],\n",
-    "[\"222047\",1045,1271,1412,1230],\n",
-    "[\"222057\",304,552,1402,1222],\n",
-    "[\"222107\",946,1181,1404,1231],\n",
-    "[\"222117\",152,370,1402,1228],\n",
-    "[\"222127\",904,1281,1389,1209],\n",
-    "[\"222137\",839,1214,1404,1224],\n",
-    "[\"222147\",109,349,1404,1222],\n",
-    "[\"222157\",13,378,1401,1226],\n",
-    "[\"222207\",337,696,1405,1230],\n",
-    "[\"222217\",44,314,1407,1231],\n",
-    "[\"222227\",174,383,1404,1220],\n",
-    "[\"222237\",286,642,1402,1226],\n",
-    "[\"222247\",987,1312,1404,1232],\n",
-    "[\"222257\",1090,1356,1415,1236],\n",
-    "[\"222307\",668,1010,1407,1229],\n",
-    "[\"222317\",232,428,1407,1230],\n",
-    "[\"222327\",216,417,1406,1231],\n",
-    "[\"222337\",1083,1367,1407,1227],\n",
-    "[\"222347\",180,391,1404,1229],\n",
-    "[\"222357\",610,848,1407,1230],\n",
-    "[\"230007\",1091,1350,1407,1231],\n",
-    "[\"230017\",1086,1325,1411,1233],\n",
-    "[\"230027\",185,400,1410,1234],\n",
-    "[\"230037\",78,329,1409,1227],\n",
-    "[\"230047\",1078,1324,1412,1238],\n",
-    "[\"230057\",20,360,1411,1237],\n",
-    "[\"230107\",84,447,1409,1235],\n",
-    "[\"230117\",937,1289,1412,1247],\n",
-    "[\"230127\",1073,1366,1418,1243],\n",
-    "[\"230137\",1042,1348,1414,1238],\n",
-    "[\"230147\",1087,1307,1414,1242],\n",
-    "[\"230157\",32,343,1412,1238],\n",
-    "[\"230207\",941,1292,1413,1248],\n",
-    "[\"230217\",992,1322,1418,1243],\n",
-    "[\"230227\",1092,1345,1414,1244],\n",
-    "[\"230237\",912,1277,1416,1244],\n",
-    "[\"230247\",168,389,1411,1248],\n",
-    "[\"230257\",857,1236,1414,1243],\n",
-    "[\"230307\",917,1271,1413,1246],\n",
-    "[\"230317\",192,536,1414,1250],\n",
-    "[\"230327\",1033,1332,1418,1245],\n",
-    "[\"230337\",205,407,1415,1245],\n",
-    "[\"230347\",1075,1351,1413,1244],\n",
-    "[\"230357\",183,391,1420,1255],\n",
-    "[\"230407\",123,366,1414,1250],\n",
-    "[\"230417\",510,745,1416,1247],\n",
-    "[\"230427\",910,1269,1413,1251],\n",
-    "[\"230437\",74,347,1424,1264],\n",
-    "[\"230447\",298,647,1419,1252],\n",
-    "[\"230457\",1095,1330,1420,1262],\n",
-    "[\"230507\",597,946,1421,1254],\n",
-    "[\"230517\",1103,1322,1422,1257],\n",
-    "[\"230527\",906,1264,1420,1260],\n",
-    "[\"230537\",34,337,1419,1265],\n",
-    "[\"230547\",1090,1336,1420,1251],\n",
-    "[\"230557\",1078,1358,1424,1264],\n",
-    "[\"230607\",643,875,1421,1267],\n",
-    "[\"230617\",662,988,1424,1264],\n",
-    "[\"230627\",979,1314,1424,1263]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "727a4608",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd_data = pd.DataFrame(data=raw_data[1:],columns=[column.replace(\" \", \"\") for column in raw_data[0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "ba8a02fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Because we have a large amount of Data to insert, we will use a sqlalchemy as I find it simpler \n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "\n",
     "# Create a SQLAlchemy engine to connect to the MySQL database for this project\n",
-    "engine = create_engine(\"mysql+mysqlconnector://pandas_user:TeenageMutanteNinjaPandas1234@localhost/pandas\")\n",
-    "\n"
+    "engine = create_engine(\"mysql+mysqlconnector://pandas_user:TeenageMutanteNinjaPandas1234@localhost/pandas\")\n"
    ]
   },
   {
