Updates for the extra information now sent by the sensor

--- a/Data colection and analyses/Add_data_to_the_database.ipynb
+++ b/Data colection and analyses/Add_data_to_the_database.ipynb
@@ -47,13 +47,46 @@
     "SHOW GRANTS FOR 'pandas_user'@'localhost';\n",
     "\n",
     "CREATE TABLE IF NOT EXISTS sensores_data (\n",
-    "    time varchar(6),\n",
+    "    time varchar(10),\n",
     "    sensor1 int,\n",
     "    sensor2 int,\n",
     "    sensor3 int,\n",
     "    sensor4 int);\n",
     "    \n",
-    " DESC sensores_data;"
+    " DESC sensores_data;\n",
+    " \n",
+    "### Update on the database for the tempo variable increase added in the lastest firmware that now includes the year and month\n",
+    "\n",
+    "<span style=\"color:red\">**If you started this project now this entire part is unnecessary!**</span>\n",
+    "\n",
+    "\n",
+    "First we need to alter the tempo column so the size can include both yy and mm\n",
+    "\n",
+    "ALTER TABLE sensores_data\n",
+    "MODIFY COLUMN tempo varchar(10) UNIQUE;\n",
+    "\n",
+    "\n",
+    "Now, because we are dealing with a lot of data we don't want to mess up, we will start by starting a transaction so we can quickly revert accidental changes. Then we select the data we want to change first to make sure we don't change any extra data and apply the UPDATE. Use the \"ROLLBACK;\" in case of error. In my case the month change happened between the days 3 and 6, so I used the 5 as a cutoff between May (day > 5) and June (day <5)\n",
+    "\n",
+    "START transaction; \n",
+    "    SELECT * from sensores_data \n",
+    "    WHERE (length(tempo) = 6 AND CAST(SUBSTRING(tempo, 1, 2) AS UNSIGNED)>05);\n",
+    "\n",
+    "UPDATE sensores_data Set tempo = concat('2405',tempo) \n",
+    "    WHERE (length(tempo) >=6 AND CAST(SUBSTRING(tempo, 1, 2) AS UNSIGNED)>05);\n",
+    "\n",
+    "SELECT * from sensores_data;\n",
+    "\n",
+    "SELECT * from sensores_data \n",
+    "    WHERE (length(tempo) = 6 AND CAST(SUBSTRING(tempo, 1, 2) AS UNSIGNED)<05);\n",
+    "    \n",
+    "UPDATE sensores_data Set tempo = concat('2406',tempo) \n",
+    "    WHERE (length(tempo) >=6 AND CAST(SUBSTRING(tempo, 1, 2) AS UNSIGNED)<05);\n",
+    "\n",
+    "\n",
+    "SELECT SUBSTRING(tempo, 1, 6) AS md  from sensores_data group by md;\n",
+    "-- rollback;\n",
+    "COMMIT;"
    ]
   },
   {
@@ -66,134 +99,134 @@
     "# The dat from the meail is copy pasted to the variable \"raw_data\"\n",
     "\n",
     "raw_data = [['tempo','Sensor 1','Sensor 2','Sensor 3','Sensor 4'],\n",
-    "[\"300554\",1033,1300,1292,1226],\n",
-    "[\"300604\",859,1113,1304,1230],\n",
-    "[\"300614\",647,871,1294,1224],\n",
-    "[\"300624\",49,346,1298,1231],\n",
-    "[\"300634\",1051,1348,1299,1232],\n",
-    "[\"300644\",1044,1369,1310,1235],\n",
-    "[\"300654\",1009,1359,1306,1230],\n",
-    "[\"300704\",559,779,1304,1230],\n",
-    "[\"300714\",1043,1367,1301,1234],\n",
-    "[\"300724\",872,1303,1308,1236],\n",
-    "[\"300734\",47,381,1298,1232],\n",
-    "[\"300744\",31,367,1305,1231],\n",
-    "[\"300754\",1012,1292,1304,1237],\n",
-    "[\"300804\",236,614,1298,1230],\n",
-    "[\"300814\",1022,1299,1302,1237],\n",
-    "[\"300824\",828,1096,1305,1232],\n",
-    "[\"300834\",130,357,1297,1233],\n",
-    "[\"300844\",414,834,1304,1205],\n",
-    "[\"300854\",876,1145,1308,1217],\n",
-    "[\"300904\",931,1314,1301,1214],\n",
-    "[\"300914\",943,1208,1302,1216],\n",
-    "[\"300924\",43,415,1303,1209],\n",
-    "[\"300934\",81,344,1312,1220],\n",
-    "[\"300944\",498,722,1307,1211],\n",
-    "[\"300954\",741,982,1238,1112],\n",
-    "[\"301004\",208,398,1251,1142],\n",
-    "[\"301014\",166,372,1264,1151],\n",
-    "[\"301024\",844,1082,1256,1147],\n",
-    "[\"301034\",946,1213,1254,1150],\n",
-    "[\"301044\",148,363,1256,1141],\n",
-    "[\"301054\",185,383,1256,1148],\n",
-    "[\"301104\",871,1284,1255,1151],\n",
-    "[\"301114\",38,351,1254,1145],\n",
-    "[\"301124\",132,364,1256,1151],\n",
-    "[\"301134\",39,332,1256,1152],\n",
-    "[\"301144\",824,1265,1234,1129],\n",
-    "[\"301154\",17,393,1259,1147],\n",
-    "[\"301204\",96,342,1261,1153],\n",
-    "[\"301214\",620,836,1255,1153],\n",
-    "[\"301224\",932,1231,1270,1168],\n",
-    "[\"301234\",991,1338,1265,1162],\n",
-    "[\"301244\",969,1315,1270,1165],\n",
-    "[\"301254\",793,1248,1266,1159],\n",
-    "[\"301304\",946,1231,1268,1166],\n",
-    "[\"301314\",505,934,1263,1160],\n",
-    "[\"301324\",184,375,1268,1155],\n",
-    "[\"301334\",202,389,1272,1159],\n",
-    "[\"301344\",841,1269,1272,1166],\n",
-    "[\"301354\",764,1205,1272,1162],\n",
-    "[\"301404\",72,449,1267,1159],\n",
-    "[\"301414\",895,1289,1281,1161],\n",
-    "[\"301424\",188,376,1286,1160],\n",
-    "[\"301434\",191,385,1281,1150],\n",
-    "[\"301444\",91,331,1283,1164],\n",
-    "[\"301454\",857,1284,1282,1159],\n",
-    "[\"301504\",914,1191,1284,1162],\n",
-    "[\"301514\",989,1273,1281,1159],\n",
-    "[\"301524\",876,1308,1282,1160],\n",
-    "[\"301534\",955,1351,1279,1160],\n",
-    "[\"301544\",31,327,1277,1159],\n",
-    "[\"301554\",186,600,1261,1145],\n",
-    "[\"301604\",826,1293,1172,1153],\n",
-    "[\"301614\",998,1294,1424,1156],\n",
-    "[\"301624\",970,1347,1214,1158],\n",
-    "[\"301634\",948,1318,1199,1165],\n",
-    "[\"301644\",288,668,885,1154],\n",
-    "[\"301654\",65,334,1207,1168],\n",
-    "[\"301704\",195,397,1243,1165],\n",
-    "[\"301714\",21,370,1084,1163],\n",
-    "[\"301724\",816,1265,1057,1158],\n",
-    "[\"301734\",22,374,917,1142],\n",
-    "[\"301744\",537,952,885,1160],\n",
-    "[\"301754\",813,1257,1257,1169],\n",
-    "[\"301804\",938,1203,1254,1169],\n",
-    "[\"301814\",564,791,1263,1170],\n",
-    "[\"301824\",183,373,1266,1156],\n",
-    "[\"301834\",36,327,1265,1156],\n",
-    "[\"301844\",415,641,1263,1164],\n",
-    "[\"301854\",200,383,1267,1161],\n",
-    "[\"301904\",944,1341,1267,1158],\n",
-    "[\"301914\",21,317,1264,1164],\n",
-    "[\"301924\",1007,1308,1267,1165],\n",
-    "[\"301934\",92,337,1266,1154],\n",
-    "[\"301944\",991,1308,1266,1158],\n",
-    "[\"301954\",33,388,1268,1160],\n",
-    "[\"302004\",609,1022,1267,1156],\n",
-    "[\"302014\",17,324,1261,1149],\n",
-    "[\"302024\",107,344,1267,1153],\n",
-    "[\"302034\",243,646,1268,1157],\n",
-    "[\"302044\",908,1176,1276,1165],\n",
-    "[\"302054\",977,1325,1269,1155],\n",
-    "[\"302104\",195,388,1269,1157],\n",
-    "[\"302114\",935,1328,1270,1154],\n",
-    "[\"302124\",969,1312,1251,1134],\n",
-    "[\"302134\",74,453,1270,1152],\n",
-    "[\"302144\",88,479,1279,1155],\n",
-    "[\"302154\",188,385,1276,1157],\n",
-    "[\"302204\",754,1168,1278,1159],\n",
-    "[\"302214\",969,1251,1280,1161],\n",
-    "[\"302224\",221,409,1279,1165],\n",
-    "[\"302234\",956,1316,1282,1164],\n",
-    "[\"302244\",122,358,1278,1159],\n",
-    "[\"302254\",803,1244,1278,1158],\n",
-    "[\"302304\",56,351,1277,1159],\n",
-    "[\"302314\",73,442,1281,1161],\n",
-    "[\"302324\",881,1271,1281,1162],\n",
-    "[\"302334\",265,655,1280,1156],\n",
-    "[\"302344\",542,761,1280,1164],\n",
-    "[\"302354\",241,466,1282,1167],\n",
-    "[\"310004\",957,1293,1282,1159],\n",
-    "[\"310014\",953,1263,1284,1156],\n",
-    "[\"310024\",80,346,1285,1163],\n",
-    "[\"310034\",703,947,1291,1162],\n",
-    "[\"310044\",867,1259,1284,1163],\n",
-    "[\"310054\",228,615,1285,1165],\n",
-    "[\"310104\",67,387,1290,1162],\n",
-    "[\"310114\",213,407,1289,1167],\n",
-    "[\"310124\",89,461,1288,1160],\n",
-    "[\"310134\",960,1269,1292,1167],\n",
-    "[\"310144\",754,1001,1289,1163],\n",
-    "[\"310154\",83,351,1287,1166],\n",
-    "[\"310204\",450,844,1290,1164],\n",
-    "[\"310214\",98,360,1290,1166],\n",
-    "[\"310224\",527,924,1290,1170],\n",
-    "[\"310234\",130,370,1292,1171],\n",
-    "[\"310244\",954,1286,1267,1148],\n",
-    "[\"310254\",555,783,1291,1168],\n",
-    "[\"310304\",778,1211,1295,1168]]"
+    "[\"021914\",886,1254,1337,1292],\n",
+    "[\"021924\",810,1215,1344,1289],\n",
+    "[\"021934\",957,1289,1331,1288],\n",
+    "[\"021944\",24,378,1248,1259],\n",
+    "[\"021954\",830,1229,1345,1282],\n",
+    "[\"022004\",1015,1305,1393,1307],\n",
+    "[\"022014\",30,331,1330,1268],\n",
+    "[\"022024\",946,1288,1344,1289],\n",
+    "[\"022034\",793,1050,1661,1320],\n",
+    "[\"022044\",240,602,1042,1279],\n",
+    "[\"022054\",533,877,1033,1307],\n",
+    "[\"022104\",852,1240,1336,1325],\n",
+    "[\"022114\",111,355,1400,1329],\n",
+    "[\"022124\",177,394,1404,1337],\n",
+    "[\"022134\",210,404,1390,1335],\n",
+    "[\"022144\",1018,1252,1491,1345],\n",
+    "[\"022154\",505,745,1602,1352],\n",
+    "[\"022204\",890,1246,1345,1352],\n",
+    "[\"022214\",145,379,1399,1348],\n",
+    "[\"022224\",862,1230,1344,1352],\n",
+    "[\"022234\",38,352,1343,1353],\n",
+    "[\"022244\",287,544,1592,1342],\n",
+    "[\"022254\",910,1247,1348,1359],\n",
+    "[\"022304\",112,361,1403,1357],\n",
+    "[\"022314\",1041,1289,1422,1360],\n",
+    "[\"022324\",213,407,1403,1359],\n",
+    "[\"022334\",443,688,1615,1360],\n",
+    "[\"022344\",865,1261,1357,1365],\n",
+    "[\"022354\",967,1289,1358,1360],\n",
+    "[\"030004\",157,379,1408,1365],\n",
+    "[\"030014\",118,367,1411,1360],\n",
+    "[\"030024\",204,404,1408,1355],\n",
+    "[\"030034\",77,416,1158,1358],\n",
+    "[\"030044\",551,876,1082,1354],\n",
+    "[\"030054\",175,390,1407,1360],\n",
+    "[\"030104\",782,1036,1613,1361],\n",
+    "[\"030114\",51,347,1351,1358],\n",
+    "[\"030124\",971,1218,1488,1362],\n",
+    "[\"030134\",995,1298,1365,1359],\n",
+    "[\"030144\",941,1275,1353,1357],\n",
+    "[\"030154\",898,1255,1351,1357],\n",
+    "[\"030204\",840,1245,1357,1360],\n",
+    "[\"030214\",1022,1268,1512,1367],\n",
+    "[\"030224\",581,911,1060,1359],\n",
+    "[\"030234\",961,1286,1360,1365],\n",
+    "[\"030244\",900,1264,1357,1363],\n",
+    "[\"030254\",987,1292,1376,1365],\n",
+    "[\"030304\",199,549,1163,1364],\n",
+    "[\"030314\",62,350,1377,1366],\n",
+    "[\"030324\",370,715,1171,1363],\n",
+    "[\"030334\",847,1235,1383,1365],\n",
+    "[\"030344\",192,400,1417,1365],\n",
+    "[\"030354\",223,417,1415,1361],\n",
+    "[\"030404\",893,1256,1372,1374],\n",
+    "[\"030414\",815,1221,1371,1363],\n",
+    "[\"030424\",192,405,1420,1368],\n",
+    "[\"030434\",640,898,1655,1367],\n",
+    "[\"030444\",413,766,1078,1365],\n",
+    "[\"030454\",460,701,1628,1375],\n",
+    "[\"030504\",665,896,1634,1368],\n",
+    "[\"030514\",994,1284,1439,1371],\n",
+    "[\"030524\",1011,1273,1459,1367],\n",
+    "[\"030534\",195,535,1087,1361],\n",
+    "[\"030544\",901,1241,1361,1369],\n",
+    "[\"030554\",870,1233,1358,1368],\n",
+    "[\"030604\",398,654,1610,1356],\n",
+    "[\"030614\",854,1227,1363,1366],\n",
+    "[\"030624\",563,905,1083,1369],\n",
+    "[\"030634\",516,859,1084,1367],\n",
+    "[\"030644\",185,402,1436,1376],\n",
+    "[\"030654\",734,965,1617,1368],\n",
+    "[\"030704\",165,493,1110,1371],\n",
+    "[\"030714\",954,1261,1367,1369],\n",
+    "[\"030724\",250,440,1616,1371],\n",
+    "[\"030734\",293,561,1696,1370],\n",
+    "[\"030744\",975,1264,1463,1374],\n",
+    "[\"030754\",560,898,1103,1375],\n",
+    "[\"030804\",986,1304,1387,1375],\n",
+    "[\"030814\",184,394,1440,1380],\n",
+    "[\"030824\",571,825,1717,1377],\n",
+    "[\"030834\",992,1285,1403,1375],\n",
+    "[\"030844\",224,416,1433,1378],\n",
+    "[\"030854\",829,1071,1665,1372],\n",
+    "[\"030904\",785,1051,1671,1364],\n",
+    "[\"030914\",173,392,1439,1377],\n",
+    "[\"030924\",976,1275,1383,1375],\n",
+    "[\"030934\",513,852,1074,1372],\n",
+    "[\"030944\",825,1216,1376,1379],\n",
+    "[\"030954\",867,1235,1445,1314],\n",
+    "[\"031004\",845,1223,1450,1319],\n",
+    "[\"031014\",644,862,1451,1315],\n",
+    "[\"031024\",190,386,1436,1310],\n",
+    "[\"031034\",54,328,1456,1326],\n",
+    "[\"031044\",949,1184,1468,1335],\n",
+    "[\"031054\",972,1198,1449,1328],\n",
+    "[\"031104\",422,640,1456,1328],\n",
+    "[\"031114\",187,385,1456,1329],\n",
+    "[\"031124\",668,885,1454,1321],\n",
+    "[\"031134\",993,1293,1455,1314],\n",
+    "[\"031144\",925,1261,1457,1327],\n",
+    "[\"031154\",279,665,1457,1327],\n",
+    "[\"031204\",180,559,1447,1315],\n",
+    "[\"031214\",990,1220,1456,1327],\n",
+    "[\"031224\",0,360,1457,1327],\n",
+    "[\"031234\",6,298,1443,1324],\n",
+    "[\"031244\",633,1030,1462,1334],\n",
+    "[\"031254\",741,1172,1452,1322],\n",
+    "[\"031304\",100,338,1465,1336],\n",
+    "[\"031314\",219,404,1461,1340],\n",
+    "[\"031324\",1025,1292,1460,1328],\n",
+    "[\"031334\",114,352,1462,1328],\n",
+    "[\"031344\",846,1239,1468,1327],\n",
+    "[\"031354\",1045,1291,1461,1327],\n",
+    "[\"031404\",860,1245,1466,1330],\n",
+    "[\"031414\",939,1283,1454,1328],\n",
+    "[\"031424\",144,364,1454,1321],\n",
+    "[\"031434\",975,1289,1463,1327],\n",
+    "[\"031444\",814,1219,1460,1331],\n",
+    "[\"031454\",809,1220,1447,1334],\n",
+    "[\"031504\",802,1222,1467,1337],\n",
+    "[\"031514\",531,925,1471,1332],\n",
+    "[\"031524\",999,1313,1467,1328],\n",
+    "[\"031534\",0,358,1469,1341],\n",
+    "[\"031544\",113,348,1468,1340],\n",
+    "[\"031554\",224,405,1486,1347],\n",
+    "[\"031604\",964,1194,1472,1337],\n",
+    "[\"031614\",687,906,1471,1332],\n",
+    "[\"031624\",997,1318,1482,1351]]"
    ]
   },
   {
